テンプレート作成

--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-Hello, World!
+<!DOCTYPE html>
+<html>
+
+<head>
+
+<title>Template</title>
+
+<style>
+<!--
+body {
+    text-align: center;
+}
+h1 {
+    font-size: 20px;
+    margin: 0px;
+    margin-top: 50px;
+}
+article {
+    margin: 30px;
+}
+footer {
+    font-size: 10px;
+}
+-->
+</style>
+
+<script type="text/javascript">
+<!--
+window.onload = function() {
+    document.getElementById("content").innerHTML = "SomeContent"
+}
+-->
+</script>
+
+</head>
+
+<body>
+<header>
+    <h1>タイトル</h1>
+    説明
+</header>
+<article>
+    <div id='content'></div>
+</article>
+
+<footer>
+    <a href="https://github.com/ix5231/template">GitHub repo</a>
+</footer>
+
+</body>
+
+</html>
